--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
@@ -33,7 +33,7 @@
             <PropertyColumn Property="e => e!.Attack" Title="Attack" CellClass="font-caption" />
             <PropertyColumn Property="e => e!.Defense" Title="Defense" CellClass="font-caption" />
             <PropertyColumn Property="e => e!.Role" Title="Role" />
-            <PropertyColumn Property="e => e.Team"></PropertyColumn>
+            <PropertyColumn Property="e => e!.Team" />
             <TemplateColumn T="SeasonDriverListing" Sortable="false">
                 <CellTemplate>
                     <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateItem(context.Item.SeasonDriver))" />
