--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeams.razor
@@ -27,7 +27,7 @@
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e!.Reliability" CellClass="font-caption" Title="REL" />
-            <PropertyColumn Property="e => e.Engine" />
+            <PropertyColumn Property="e => e!.Engine" />
             <TemplateColumn T="SeasonTeamListing" SortBy="e => e.Manufacturer" Title="Manufacturer">
                 <CellTemplate>
                     <SupplierDisplay Colour="@context.Item.ManColour" Accent="@context.Item.ManAccent">
