--- a/SimTECH/SimTECH/Pages/Factors/Tyres.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Tyres.razor
@@ -15,7 +15,7 @@
         </MudStack>
         <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4">Distance per advance: @(advanceDistance)Km</MudText>
     </MudPaper>
-    <MudDataGrid T="Tyre" Items="@TyreData" RowsPerPage="15" Bordered="true" Dense="true">
+    <MudDataGrid T="Tyre" Items="@tyres" RowsPerPage="15" Bordered="true" Dense="true">
         <Columns>
             <PropertyColumn Property="e => e!.Name" CellStyleFunc="@_applyTyreColouring" />
             <PropertyColumn Property="e => e!.ForWet" />
@@ -50,6 +50,7 @@
                         <StateTogglerButton CallbackToggled="@(async (bool toggled) => await OnToggleChange(context.Item, toggled))"
                                             Default="@(context.Item.State == State.Active)" />
                         <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTyre(context.Item))" />
+                        <MudIconButton Icon="@Icons.Material.Outlined.Delete" Color="Color.Error" OnClick="@(async () => await ArchiveTyre(context.Item))" />
                     </MudButtonGroup>
                 </CellTemplate>
             </TemplateColumn>
@@ -61,7 +62,7 @@
 </MudContainer>
 
 @code {
-    private List<Tyre> TyreData = new();
+    private List<Tyre> tyres = new();
 
     int advanceDistance;
 
@@ -73,7 +74,7 @@
             new BreadcrumbItem("Tyres", href: "tyres", disabled: true),
         });
 
-        TyreData = await _tyreService.GetTyres();
+        tyres = await _tyreService.GetTyres();
 
         advanceDistance = _config.Value.CalculationDistance;
     }
@@ -83,8 +84,8 @@
         return $"border-color: {e.Colour}";
     };
 
-    async Task AddItem() => await UpdateTyre(null);
-    async Task UpdateTyre(Tyre? item)
+    private async Task AddItem() => await UpdateTyre(null);
+    private async Task UpdateTyre(Tyre? item)
     {
         var parameters = new DialogParameters { ["Tyre"] = item };
 
@@ -94,14 +95,20 @@
         if (!result.Canceled && result.Data != null && result.Data is Tyre updatedItem)
         {
             await _tyreService.UpdateTyre(updatedItem);
-            TyreData = await _tyreService.GetTyres();
+            tyres = await _tyreService.GetTyres();
         }
     }
 
-    async Task OnToggleChange(Tyre tyre, bool toggled) => await ToggleState(tyre, (toggled ? State.Active : State.Closed));
-    async Task ToggleState(Tyre tyre, State targetState)
+    private async Task OnToggleChange(Tyre tyre, bool toggled) => await ToggleState(tyre, (toggled ? State.Active : State.Closed));
+    private async Task ToggleState(Tyre tyre, State targetState)
     {
         await _tyreService.ChangeState(tyre, targetState);
-        TyreData = await _tyreService.GetTyres();
+        tyres = await _tyreService.GetTyres();
+    }
+
+    private async Task ArchiveTyre(Tyre tyre)
+    {
+        await _tyreService.ArchiveItem(tyre);
+        tyres.Remove(tyre);
     }
 }
